# Randdi-trading

./: #개발최종사용법모음.txt  .gitignore  policy.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
artifacts/: release_blocked.json  report_validate.json
patches/: 0001-Refactor-split-CLI-router-and-command-implementation.patch
policies/: current.yaml
policies/releases/0.1.0/: policy.yaml
src/: cli.py  diff.py  gate.py
src/strategy_validator/: cli.py  cli_commands.py  errors.py  loader.py  validator.py
tests/: helpers.py  test_diff.py  test_gate.py  test_outfile.py  test_release_dryrun.py  test_release_report_file.py  test_release_rollback.py  test_report.py  test_validator.py
